--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="splash_background">#0F172A</color>
+    <color name="splash_circle_outer">#1D3A64</color>
+    <color name="splash_circle_inner">#162643</color>
+    <color name="splash_icon">#FFFFFFFF</color>
 </resources>
