--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.CrowdTracker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.CrowdTracker" parent="Theme.Material3.DayNight.NoActionBar" />
+
+    <style name="Theme.CrowdTracker.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/splash_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_logo</item>
+        <item name="windowSplashScreenIconBackgroundColor">@android:color/transparent</item>
+        <item name="postSplashScreenTheme">@style/Theme.CrowdTracker</item>
+    </style>
 </resources>
